# rust-petname

./: .git-blame-ignore-revs  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build-macos.yml  build.yml  release-macos.yml  release.yml
petname-macros/: Cargo.toml
petname-macros/src/: input.rs  lib.rs  paths.rs  text.rs
petname-macros/src/lang/: english.rs  mod.rs  turkish.rs
scripts/: doc  semver-checks
src/: cli.rs  lib.rs  main.rs
src/lang/: english.rs  mod.rs  turkish.rs
tests/: alliterations.rs  basic.rs  integration.rs  mocks.rs  petname.rs  petnames.rs
words/large/: adverbs.txt
words/medium/: names.txt
words/small/: names.txt
words/turkish/: adjectives.txt  adverbs.txt  nouns.txt
