[package]
name = "petname-macros"
version = "3.0.0-alpha.2"
authors = ["Gavin Panella <gavin@allenap.me>"]
description = "Proc macros for the petname crate."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/allenap/rust-petname"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
